--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:FlightManagementSystemFrontEnd": "node dist/flight-management-system-front-end/server/server.mjs",
-    "server":"npx json-server db.json --watch"
+    "server": "npx json-server db.json --watch"
   },
   "private": true,
   "dependencies": {
@@ -24,8 +24,14 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "json-server": "^1.0.0-beta.0",
+    "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
+    "razorpay": "^2.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
